<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="SNBS Settings">
                <CheckBoxPreference
                        android:title="@string/fire_alert"
                        android:defaultValue="true"
                        android:key="pref_key_snbs_fire_alert" />
                <CheckBoxPreference
                        android:title="@string/earthquake_alert"
                        android:defaultValue="true"
                        android:key="pref_key_snbs_earthquake_alert" />
                <CheckBoxPreference
                        android:title="@string/thunderstorm_alert"
                        android:defaultValue="true"
                        android:key="pref_key_snbs_thunderstorm_alert" />
                 <CheckBoxPreference
                        android:title="@string/riot_alert"
                        android:defaultValue="true"
                        android:key="pref_key_snbs_riot_alert" />
                <ListPreference
                        android:title="@string/snbs_font"
                        android:summary="SNBS Message Font"
                        android:key="listPref"
                        android:defaultValue="8"
                        android:entries="@array/snbs_display_font"
                        android:entryValues="@array/snbs_display_font_values" />
        </PreferenceCategory>

          <PreferenceCategory android:title="Notification Settings">
    <CheckBoxPreference android:key="pref_key_enable_notifications"
                        android:title="@string/notifications"
                        android:summary="@string/notifications_summary"
                        android:defaultValue="true" />
    <RingtonePreference android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_enable_notifications"
                        android:key="pref_key_ringtone"
                        android:title="Select ringtone"
                        android:ringtoneType="notification"
                        android:defaultValue="content://settings/system/notification_sound" />
    <ListPreference     android:layout="?android:attr/preferenceLayoutChild"
                        android:dependency="pref_key_enable_notifications"
                        android:key="pref_key_vibrateWhen"
                        android:defaultValue="@string/prefDefault_vibrateWhen"
                        android:title="@string/vibrate"
                        android:summary="@string/vibrate_sumary"
                        android:entries="@array/vibrate_list"
                        android:entryValues="@array/vibrate_values"
                        android:dialogTitle="@string/prefDialogTitle_vibrateWhen" />
  </PreferenceCategory>
        
</PreferenceScreen>